[package]
name = "print-pcap-devices"
version = "0.1.0"
edition = "2021"
description = "Tool to quickly print the devices visible via the PCAP crate"
authors = ["Julian Schmid <info@julianschmid.name>"]
repository = "https://github.com/JulianSchmid/print-pcap-devices"
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = "1.1.0"
